# ras-boilerplate

./: .env  .gitignore  Cargo.toml  README.md
src/: database.rs  db.rs  lib.rs  main.rs
src/api/: healthcheck.rs  mod.rs  roles.rs  todos.rs  users.rs
src/data/: data_context.rs  mod.rs
src/data/commands/: create_todo_command.rs  delete_todo_command.rs  mod.rs  update_todo_command.rs
src/data/contexts/: mod.rs  roles_context.rs  todos_context.rs  user_repository.rs
src/data/models/: mod.rs  role.rs  todo.rs  user.rs
src/data/queries/: get_all_todos_query.rs  get_todo_by_id_query.rs
src/data/repositories/: mod.rs  roles_repository.rs  todos_repository.rs  users_repository.rs
src/models/: role.rs  user.rs
src/repositories/: mod.rs  roles_repository.rs  todos_repository.rs  users_repository.rs
src/routers/: healthcheck_handler.rs  mod.rs  roles.rs  roles_router.rs  todos.rs  todos_router.rs  users.rs  users_router.rs
