[package]
name = "rss-boilerplate"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
axum = "0.7.1"
axum-error = "0.2"
tower-http = { version = "0.6.1", features = ["cors"] }
tokio = { version = "1.29", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0"
surrealdb = "2.0.4"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0"
once_cell = "1.20.2"
uuid = "1.11.0"
json = "0.12.4"
validator = { version = "0.18.1", features = ["derive"] }
